2005-02-14 23:35 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: changed [GormClassManager parseHeader:]
	to be able to properly handle categories on existing classes.

2005-02-14 01:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormObjCHeaderParser/OCIVarDecl.m: Corrected problem with
	reading declarations which have the "*" spaced oddly.  Problem
	reported by Nicolas Roard.

2005-02-13 09:37 Gregory John Casamento <greg_casamento@yahoo.com>

	* GModelDecoder.m: After gmodel load, mark the document as
	edited in openGModel:.
	* GormDocument.m: in setupDefaults: mark the document as
	edited.

2005-02-13 09:27 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: in [GormDocument attachObject:withParent:]
	coercion of id to NSControl to avoid warning about selection of
	the target method.  Changed setSelectionFromEditor: to 
	stop any connection activity when a selection is changed.

2005-02-13 04:46 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: in -loadDocument: if the extension is
	.gmodel call the openGModel: method to load it.

2005-02-06 10:43 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: in -saveAsDocument: return the value
	returned by -saveGormDocument: when it's called.

2005-02-06 02:13 Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/GormViewSizeInspector.gorm: Corrected box title color.

2005-02-05 15:26 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/main.m: Corrected "revert To Saved" to 
	"Revert To Saved".
	* Palettes/2Controls/GormNSButtonInspector.gorm: Corrected box
	title color.

2005-02-05 09:16 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Improved some of the panel messages when 
	gorm has a problem loading/saving.  Added titles.
	* Gorm.m: Made some of the warning panels have a title.  Added code
	to -testInterface: and -endTesting: to close extra windows opened
	during testing.