@@ -2,41 +2,7 @@
     "## Comment" = "Do NOT change this file, Gorm maintains it";
     FirstResponder = {
 	Actions = (
-	    "alignLeft:",
-	    "capitalizeWord:",
-	    "changeFont:",
-	    "copy:",
-	    "delete:",
-	    "deleteToBeginningOfParagraph:",
-	    "deleteWordBackward:",
-	    "fax:",
-	    "loosenKerning:",
-	    "miniaturize:",
-	    "moveDown:",
-	    "moveLeft:",
-	    "moveToBeginningOfParagraph:",
-	    "moveUp:",
-	    "moveWordForward:",
-	    "openDocument:",
-	    "orderFrontDataLinkPanel:",
 	    "orderFrontFontPanel:",
-	    "orderOut:",
-	    "pasteAsPlainText:",
-	    "performClose:",
-	    "raiseBaseline:",
-	    "saveAllDocuments:",
-	    "scrollLineDown:",
-	    "scrollViaScroller:",
-	    "selectParagraph:",
-	    "selectWord:",
-	    "showWindow:",
-	    "swapWithMark:",
-	    "takeObjectValueFrom:",
-	    "toggle:",
-	    "toggleTraditionalCharacterShape:",
-	    "turnOffLigatures:",
-	    "unscript:",
-	    "useStandardLigatures:",
 	    "borderSelected:",
 	    "horizontalSelected:",
 	    "verticalSelected:",
